[package]
name = "blockchain"
version = "0.1.0"
authors = ["Mark Zuschlag <markazuschlag@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0"
chrono = "0.4"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8"
url = "2.1.0"
uuid = { version = "0.7", features = ["v4"] }